feat: setup ic project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "dip20"]
-	path = dip20
+	path = ic/dip20
 	url = https://github.com/Psychedelic/dip20
 [submodule "dip721"]
-	path = dip721
+	path = ic/dip721
 	url = https://github.com/Psychedelic/dip721
