fix: cap/dip721 canister wasm and candid

--- a/ic/Makefile
+++ b/ic/Makefile
@@ -1,11 +1,11 @@
 .PHONY: init candid build local cap-local start-replica stop-replica test format lint clean dfx-clean
 
 LOCAL_CUSTODIAN_PRINCIPAL = $(shell dfx identity get-principal)
-CAP_ID ?= $(shell cd cap && dfx canister id cap-router)
+CAP_ID ?= $(shell dfx canister id cap-router)
 
 cap-local:
-	# Verifying cap... $(shell [ -z "$(CAP_ID)" ] && cd cap && dfx deploy cap-router)
-	@echo "cap local canister id: $(CAP_ID)"
+	# Verifying cap... $(shell [ -z "$(CAP_ID)" ] && dfx deploy cap-router)
+	@echo "cap canister id: $(CAP_ID)"
 
 init:
 	git submodule update --init --recursive
@@ -18,8 +18,8 @@ build: candid start-replica
 	dfx canister create emporium
 	dfx build emporium
 
-local: build cap-local
-	dfx deploy emporium --argument '(opt record{nft_canister=null; cap=opt principal"$(CAP_ID)"})'
+local: candid start-replica cap-local
+	dfx deploy emporium --argument '(opt record{custodians=opt vec{principal"$(LOCAL_CUSTODIAN_PRINCIPAL)"}; nft_canister=null; cap=opt principal"$(CAP_ID)"})'
 
 start-replica:
 	dfx ping local || dfx start --clean --background
