--- a/ic/emporium/Cargo.toml
+++ b/ic/emporium/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Ossian Mapes <self@ossian.dev>"]
 edition = "2018"
 
 [dependencies]
+regex = "1.5.6"
 ic-cdk-macros = "0.5"
 candid = "0.7.4"
 serde = "1.0"
