refactor: centralize repo around ic

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "dip721"]
-	path = ic/dip721
+	path = dip721
 	url = https://github.com/Psychedelic/dip721
-[submodule "ic/dip721"]
-	path = ic/dip721
-	url = https://github.com/Psychedelic/dip721
-[submodule "ic/cap"]
-	path = ic/cap
+[submodule "cap"]
+	path = cap
 	url = https://github.com/Psychedelic/cap
